cli/tests/testdata/error_cause.ts
throw new Error("foo", { cause: new Error("bar", { cause: "deno" }) });
